# datek-jaipur

./: .envrc  .gitignore  .gitlab-ci.yml  README.md  changelog.md  pyproject.toml  pytest.ini
.github/actions/install-python-env/: action.yml
.github/workflows/: CI.yml
datek_jaipur/: utils.py
datek_jaipur/application/: console.py
datek_jaipur/application/adapters/: base.py
datek_jaipur/application/state_machine/: scope.py  states.py
datek_jaipur/domain/: utils.py
datek_jaipur/domain/compound_types/: card.py  coin.py  game.py
datek_jaipur/domain/events/: all_card_sets_created.py  all_coin_sets_created.py  card_set_created.py  game_created.py  goods_bought.py  goods_sold.py  goods_traded.py  player_created.py
jaipur/: constants.py  definitions.py  errors.py  events.py  log.py  utils.py
jaipur/adapters/: base.py  console.py
jaipur/compound_types/: card.py  coin.py  game.py  goods.py  player.py  turn.py
jaipur/elements/: card.py  coin.py  game.py  player.py
jaipur/events/: all_card_sets_created.py  all_coin_sets_created.py  card_set_created.py  game_created.py  player_created.py  turn_completed.py
jaipur/state_machine/: fsm.py  scope.py  states.py
tests/: test_events.py  test_utils.py
tests/acceptance/application/: test_console.py  utils.py
tests/application/: test_console.py  utils.py
tests/domain/: fixtures.py  test_utils.py
tests/domain/events/: test_game_created.py  test_player_created.py
tests/elements/: test_game.py
tests/events/: conftest.py  test_game_created.py  test_goods_sold.py  test_turn_completed.py
tests/feature/: buy_goods.feature  test_buy_goods.py
tests/unit/domain/: test_utils.py
tests/unit/domain/compound_types/: test_card.py
tests/unit/domain/events/: conftest.py  test_game_created.py  test_goods_bought.py  test_goods_sold.py  test_goods_traded.py
