[tool.poetry]
name = "jaipur"
version = "0.1.0"
description = "Jaipur board game"
authors = ["Attila Dudas <dudasa7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
